<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleCalendar</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="login_required_401_error">Login Required</string>
    <string name="please_wait_message">Please wait...</string>
	<string name="no_events">There are no events in this calendar. Press ok to go back.</string>
	<string name="insert_event">Insert Event</string>
	<string name="delete_event">Delete Event</string>
	<string name="inserted_the_event">The Event has been inserted successfully. You can refresh the list to check.</string>
	<string name="error_inserting_event">Some error has occurred in inserting the error. Please try again.</string>
	<string name="summary">Summary</string>
	<string name="start_date">Start Date</string>
	<string name="end_date">End Date</string>
	<string name="description">Description</string> 
	<string name="location">Location</string>   
</resources>