<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        >
 	<TableRow
            android:id="@+id/tableRow1"
            android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp" 
        android:layout_marginRight="3dp" />

    <EditText
        android:id="@+id/summary_editText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp" >
    </EditText>

   </TableRow>
	<TableRow
            android:id="@+id/tableRow2"
            android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp" 
        android:layout_marginRight="3dp" />

    <EditText
        android:id="@+id/startdate_edit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="2013-2-28" >
    </EditText>

   </TableRow>
 	<TableRow
            android:id="@+id/tableRow3"
            android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp" 
        android:layout_marginRight="3dp" />

    <EditText
        android:id="@+id/enddate_edit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="2013-2-28" >
    </EditText>

   </TableRow>
    <TableRow
            android:id="@+id/tableRow4"
            android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp" 
        android:layout_marginRight="3dp" />

    <EditText
        android:id="@+id/description_edit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
       >
    </EditText>

   </TableRow>
 <TableRow
            android:id="@+id/tableRow5"
            android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp" 
        android:layout_marginRight="3dp" />

    <EditText
        android:id="@+id/location_edit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp">
    </EditText>

   </TableRow>
   <Button
	    android:id="@+id/insert_event_btn"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	 
	    
	    android:text="@string/insert_event"
	    android:layout_marginLeft="60dp"
	    android:layout_marginRight="60dp"
	    android:layout_marginBottom="20dp"
	     android:layout_marginTop="20dp"
	    android:onClick="insert_event_btn_clicked"
	    />
</TableLayout>
</RelativeLayout>